refactor: separate greeter service scheme

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -24,8 +24,9 @@
     "moleculer-repl": "^0.5.7"
   },
   "dependencies": {
-    "moleculer-web": "^0.8.5",
-    "moleculer": "^0.13.9"
+    "@owl/api-service-greeter": "*",
+    "moleculer": "^0.13.9",
+    "moleculer-web": "^0.8.5"
   },
   "engines": {
     "node": ">= 8.x.x"
